add add_new_snippet option to skillet editor

--- a/src/panhandler/templates/panhandler/collection.html
+++ b/src/panhandler/templates/panhandler/collection.html
@@ -43,7 +43,7 @@
                     <div class="card-header">
 
                             <a href="/panhandler/favorite_skillet/{{ skillet.name }}"
-                               class="float-right btn btn-outline-danger">
+                               class="float-right btn btn-outline-danger btn-sm">
                                 <li class="fa fa-heart"></li>
                             </a>
                         {{ skillet.label }}
