--- a/src/panhandler/templates/panhandler/edit_skillet.html
+++ b/src/panhandler/templates/panhandler/edit_skillet.html
@@ -53,6 +53,8 @@
             new_label_key.val('');
             new_label_value.val('');
 
+            // go ahead and update our skillet object
+            update_all_labels();
         }
 
         function enlarge_text_area(target) {
@@ -372,10 +374,13 @@
                 snippet_def['xpath'] = '';
                 snippet_def['element'] = '';
             }
+            if (skillet_snippets.findIndex(i => i.name === snippet_name) === -1) {
+                skillet_snippets.push(snippet_def);
+                add_snippet(snippet_name);
+            } else {
+                alert('Snippet with that name already exists!');
+            }
 
-            skillet_snippets.push(snippet_def);
-
-            add_snippet(snippet_name);
         }
 
         function add_snippet(key) {
@@ -911,13 +916,15 @@
              */
             let json_output_control = $('#id_skillet_contents');
 
+            update_preamble();
+
             skillet['variables'] = skillet_variables;
             skillet['snippets'] = skillet_snippets;
 
-            json_output_control.val(JSON.stringify(skillet, null, '  '));
-
             // grab any updated labels here
             update_all_labels();
+
+            json_output_control.val(JSON.stringify(skillet, null, '  '));
 
             let doc = $(document.documentElement);
             doc.css('cursor', 'progress');
@@ -1049,15 +1056,22 @@
 
         </div>
         <div class="card-body">
-            <div class="form-group">
-                <label for="id_skillet_id">Name:</label>
-                <input type="text" name="skillet_id" value="{{ skillet.name }}" class="form-control"
-                       id="id_skillet_id">
-            </div>
-            <div class="form-group">
-                <label for="id_skillet_label">Label:</label>
-                <input type="text" name="skillet_label" value="{{ skillet.label }}" class="form-control"
-                       id="id_skillet_label">
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="id_skillet_id">Name:</label>
+                    <input type="text" name="skillet_id" value="{{ skillet.name }}" class="form-control"
+                           id="id_skillet_id" title="Skillet ID">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="id_skillet_label">Label:</label>
+                    <input type="text" name="skillet_label" value="{{ skillet.label }}" class="form-control"
+                           id="id_skillet_label">
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="id_skillet_type">Type:</label>
+                    <input type="text" name="skillet_type" value="{{ skillet.type }}" class="form-control"
+                           id="id_skillet_type" disabled="disabled">
+                </div>
             </div>
             <div class="form-group mb-4">
                 <label for="id_skillet_description">Description:</label>
